Add finance section and enhance Login component with form handling and animations

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "frontend"
   ],
   "author": "Ritick Roushan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-redux": "^9.2.0"
+  }
 }
