--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "chart.js": "^4.4.8",
+    "framer-motion": "^12.5.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
