--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ritick Roushan",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "react-redux": "^9.2.0"
   }
 }
